[package]
name = "dev-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full", "client-legacy", "server"] }
http-body-util = "0.1"
bytes = "1"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"
regex = "1.10"
tokio-tungstenite = "0.21"

[profile.release]
strip = true
lto = true
